# dart

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: app.py  bridge.py
app/templates/: index.html
asset/: debugger.toml  hardware.toml  param.toml
config/: debugger.toml  hardware.toml
detector/: detector.cpp  detector.hpp  detector_node.hpp
hardware/: CMakeLists.txt  hardware_node.cpp  hardware_node.hpp
hardware/hik_cam/: CMakeLists.txt  hik_camera.cpp  hik_camera.hpp  hik_camera_fallback.cpp  hik_log.hpp
hardware/serial/: CMakeLists.txt  crc16.hpp  fixed_packet.hpp  serial_thread.cpp  serial_thread.hpp  transceiver_manager.hpp
hardware/serial/protocol/: protocol_interface.hpp  uart_protocol.cpp  uart_protocol.hpp  usb_bulk_protocol.cpp  usb_bulk_protocol.hpp
plugin/: CMakeLists.txt
plugin/debug/: logger.hpp
plugin/param/: parameter.cpp  parameter.hpp  runtime_parameter.cpp  runtime_parameter.hpp  static_config.hpp
plugin/rerun/: CMakeLists.txt  collection_adapters.hpp  rmcv_rerun.cpp  rmcv_rerun.hpp
plugin/rmcv_bag/: CMakeLists.txt  playback_node.cpp  playback_node.hpp  recorder_node.cpp  recorder_node.hpp
plugin/stats/: fps_stats.hpp
plugin/telemetry/: telemetry.cpp  telemetry.hpp
plugin/visualizer/: visualizer_node.cpp  visualizer_node.hpp
plugin/watchdog/: watchdog_node.hpp
scripts/: README.md  cleanup.sh  dart2026.service  install_service.sh  watchdog.sh
test/: test_calibration.cpp  test_serial.cpp
tools/: calibration.cpp
umt/: BasicObjManager.hpp  Message.hpp  ObjManager.hpp  umt.hpp
